--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -19,7 +19,7 @@ ja:
       user:
         name: 名前
         email: メールアドレス
-        admin: 管理者権限
+        admin: 権限
         password: パスワード
         password_confirmation: パスワード(確認)
         created_at: 登録日時
