--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -14,6 +14,7 @@ ja:
         id: ID
         name: 料理名
         description: 作り方
+        image: 画像
         created_at: 登録日時
         updated_at: 更新日時
       user:
