--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -25,6 +25,10 @@ ja:
         password_confirmation: パスワード(確認)
         created_at: 登録日時
         updated_at: 更新日時
+      comment:
+        name: 名前
+        body: メッセージ
+        created_at: 投稿日時
   date:
     abbr_day_names:
     - 日
